# abc-calibration-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  test_manager.yaml  test_toy_model.yaml
abctools/: abc_classes.py  abc_manager.py  abc_methods.py  manager.py  plot_utils.py
abctools/examples/abc-smc/: config.yaml  main.py  readme.md
abctools/examples/return-summaries/: config.yaml  main.py  readme.md
abctools/examples/return-summaries/summarize/simulations/: full_params_list_all_sims.json
abctools/examples/return-summaries/summarize/simulations/simulation_0/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_1/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_2/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_3/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_4/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_5/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_6/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_7/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_8/: input.YAML
abctools/examples/return-summaries/summarize/simulations/simulation_9/: input.YAML
abctools/tests/: test_abc_pipeline.py  test_manager.py  test_simulation_bundle.py
