[tool.poetry]
name = "abctools"
version = "0.1.0"
description = ""
authors = ["chris-cfa <pwl3@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pre-commit = "^3.7.1"
chaospy = "^4.3.15"
scipy = "^1.14.0"
sobol-seq = "^0.2.0"
seaborn = "^0.13.2"
cfa-azure = {git = "http://github.com/CDCgov/cfa_azure.git", branch="master"}
gcm_python_wrappers = {git = "https://github.com/cdcent/cfa-gcm-python-wrappers.git", branch="wtk_abc_pipeline"}
pyqt6 = "^6.7.1"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
polars = "^1.6.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
