[tool.poetry]
name = "abctools"
version = "0.2.0"
description = ""
authors = ["CDC/CFA - Team CMEI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pre-commit = "^3.7.1"
chaospy = "^4.3.15"
scipy = "^1.14.0"
sobol-seq = "^0.2.0"
seaborn = "^0.13.2"
pyqt6 = "^6.7.1"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
polars = "^1.6.0"
matplotlib = "^3.10.3"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
