[project]
name = "abctools"
version = "0.2.0"
description = ""
authors = [{ name = "CDC/CFA - Team CMEI" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "PyYAML>=6.0.1,<7",
    "pre-commit>=3.7.1,<4",
    "chaospy>=4.3.15,<5",
    "scipy>=1.14.0,<2",
    "sobol-seq>=0.2.0,<0.3",
    "seaborn>=0.13.2,<0.14",
    "pyqt6>=6.7.1,<7",
    "pyarrow>=18.0.0,<19",
    "tqdm>=4.66.5,<5",
    "polars>=1.6.0,<2",
    "matplotlib>=3.10.3,<4",
    "pytest>=8.4.1,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
